--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,9 @@
 
 \usepackage{calc}
 
+\usepackage{layouts} % for \printinunitsof
+% use textwidth in cm: \printinunitsof{cm}\prntlen{\textwidth}
+
 %\usepackage[bookmarks=true]{hyperref}
 \usepackage{hyperref}
 
