add initial incbi-sq results (herbbookshelf1nom only)

--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -558,3 +558,10 @@ and Figure~\ref{fig:incbi-lpastar-fig1}.
       The right column uses a balanced cardinality strategy.}
    \label{fig:incbi-road-ne}
 \end{figure*}
+
+\section{LazySP Selector Experiments}
+
+\begin{figure}
+   \includegraphics{build/incbi-sq/herbbookshelf1nom}
+   \caption{Problem: \texttt{herbbookshelf1nom}}
+\end{figure}
