add more incbi-sq problems

--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -562,6 +562,26 @@ and Figure~\ref{fig:incbi-lpastar-fig1}.
 \section{LazySP Selector Experiments}
 
 \begin{figure}
+   \includegraphics{build/incbi-sq/herbbin0}
+   \caption{Problem: \texttt{herbbin0}}
+\end{figure}
+
+\begin{figure}
+   \includegraphics{build/incbi-sq/herbbookshelf0}
+   \caption{Problem: \texttt{herbbookshelf0}}
+\end{figure}
+
+\begin{figure}
    \includegraphics{build/incbi-sq/herbbookshelf1nom}
    \caption{Problem: \texttt{herbbookshelf1nom}}
+\end{figure}
+
+\begin{figure}
+   \includegraphics{build/incbi-sq/workcellef}
+   \caption{Problem: \texttt{workcellef}}
+\end{figure}
+
+\begin{figure}
+   \includegraphics{build/incbi-sq/workcellij}
+   \caption{Problem: \texttt{workcellij}}
 \end{figure}
