--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -29,7 +29,7 @@ In Section~\ref{sec:family:families-in-manipulation},
 we motivate these problems in manipulation problems.
 
 \section{Families in Manipulation Problems}
-\label{sec:family:families-in-manipulation}
+\label{sec:family:in-manipulation}
 
 When addressing multi-step tasks
 such as the table clearing task in
@@ -431,7 +431,7 @@ which automatically discovers $\mathcal{C}$-subsets
 in manipulation tasks.
 
 \section{Approach: Reasoning over Family Beliefs}
-\ref{sec:family:approach}
+\label{sec:family:approach}
 
 LEMUR relies on a domain-specific ensemble cost model
 $\mathcal{M}$ to provide it with planning and execution cost
