add initial wincbi results to incbi chapter

--- a/figs/incbi-sq/herbbookshelf1nom.tex
+++ b/figs/incbi-sq/herbbookshelf1nom.tex
@@ -53,6 +53,28 @@
       {data/incbi-sq/stats-byparam-herbbookshelf1nom-incbi-rev-gf.txt};
    \addlegendentry{Rev}
    
+
+   \addplot
+      plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbookshelf1nom-wincbi-alt-gf.txt};
+   \addplot
+      plot[color=blue,dashed,mark options={color=blue},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbookshelf1nom-wincbi-bisect-gf.txt};
+   \addplot
+      plot[color=green,dashed,mark options={color=green},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbookshelf1nom-wincbi-even-gf.txt};
+   \addplot
+      plot[color=purple,dashed,mark options={color=purple},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbookshelf1nom-wincbi-fwd-gf.txt};
+   \addplot
+      plot[color=cyan,dashed,mark options={color=cyan},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbookshelf1nom-wincbi-rev-gf.txt};
+
    
    %\addplot
    %   plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
