--- a/figs/incbi-sq/workcellij.tex
+++ b/figs/incbi-sq/workcellij.tex
@@ -52,7 +52,29 @@
       table[x=gf,y=planner-dur-search-finmean]
       {data/incbi-sq/stats-byparam-workcellij-incbi-rev-gf.txt};
    \addlegendentry{Rev}
-   
+
+
+   \addplot
+      plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-workcellij-wincbi-alt-gf.txt};
+   \addplot
+      plot[color=blue,dashed,mark options={color=blue},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-workcellij-wincbi-bisect-gf.txt};
+   \addplot
+      plot[color=green,dashed,mark options={color=green},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-workcellij-wincbi-even-gf.txt};
+   \addplot
+      plot[color=purple,dashed,mark options={color=purple},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-workcellij-wincbi-fwd-gf.txt};
+   \addplot
+      plot[color=cyan,dashed,mark options={color=cyan},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-workcellij-wincbi-rev-gf.txt};
+
    
    %\addplot
    %   plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
