--- a/figs/incbi-sq/herbbin0.tex
+++ b/figs/incbi-sq/herbbin0.tex
@@ -54,6 +54,28 @@
    \addlegendentry{Rev}
    
    
+   \addplot
+      plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbin0-wincbi-alt-gf.txt};
+   \addplot
+      plot[color=blue,dashed,mark options={color=blue},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbin0-wincbi-bisect-gf.txt};
+   \addplot
+      plot[color=green,dashed,mark options={color=green},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbin0-wincbi-even-gf.txt};
+   \addplot
+      plot[color=purple,dashed,mark options={color=purple},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbin0-wincbi-fwd-gf.txt};
+   \addplot
+      plot[color=cyan,dashed,mark options={color=cyan},mark options={scale=0.5}]
+      table[x=gf,y=planner-dur-search-finmean]
+      {data/incbi-sq/stats-byparam-herbbin0-wincbi-rev-gf.txt};
+   
+   
    %\addplot
    %   plot[color=red,dashed,mark options={color=red},mark options={scale=0.5}]
    %   table[x=gf,y=planner-dur-total-finmean]
