--- a/references.bib
+++ b/references.bib
@@ -39,6 +39,14 @@
    year = {1994},
 }
 
+=== Created manually ===
+@misc{alberts1998softwaredynamicgraph,
+   author = {David Alberts and Giuseppe Cattaneo and Umberto Nanni
+      and Christos D. Zaroliagis},
+   title = {A Software Library of Dynamic Graph Algorithms},
+   year = {1998},
+}
+
 === From http://www.roboticsproceedings.org/rss03/p30.html ===
 @inproceedings{alterovitz2007stochasticroadmap,
    author = {R. Alterovitz and T. Sim\'{e}on and K. Goldberg},
@@ -342,6 +350,22 @@
    year = {2015, in submission},
 }
 
+=== From dl.acm.org ===
+@incollection{demetrescu2010dynamic,
+   author = {Demetrescu, Camil and Eppstein, David and Galil, Zvi
+      and Italiano, Giuseppe F.},
+   chapter = {Dynamic Graph Algorithms},
+   title = {Algorithms and Theory of Computation Handbook},
+   editor = {Atallah, Mikhail J. and Blanton, Marina},
+   year = {2010},
+   isbn = {978-1-58488-822-2},
+   pages = {9--9},
+   numpages = {1},
+   url = {http://dl.acm.org/citation.cfm?id=1882757.1882766},
+   acmid = {1882766},
+   publisher = {Chapman \& Hall/CRC},
+} 
+
 === From RI website ===
 @inproceedings{diankov2008bispace,
    author = {Rosen Diankov and Nathan Ratliff and David Ferguson and
@@ -424,6 +448,15 @@
    year = {1969},
    doi = {10.1287/opre.17.3.395},
    url = {http://dx.doi.org/10.1287/opre.17.3.395},
+}
+
+=== Manual ===
+@incollection{eppstein1999dynamic,
+   author = {Eppstein, D and Galil, Z and Italiano, GF},
+   title = {Dynamic graph algorithms},
+   booktitle = {Algorithms and Theory of Computation Handbook, chapter 8},
+   year = {1999},
+   publisher = {CRC Press},
 }
 
 === From IEEE Xplore ===
@@ -1702,6 +1735,15 @@
    address = {Brooklyn, New York, NY, USA},
    year = {1955},
    pages = {199-203},
+}
+
+=== Manual ===
+@book{siek2001boostgraph,
+   author = {Jeremy G. Siek and Lie-Quan Lee and Andrew Lumsdaine},
+   title = {The Boost Graph Library: User Guide and Reference Manual},
+   publisher = {Addison-Wesley Professional},
+   year = {2001},
+   isbn = {978-0-201-72914-6},
 }
 
 === From http://citeseerx.ist.psu.edu/ ===
