--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -98,6 +98,7 @@ Talk about discretizing states.
 There are other ways that don't discretize C-Space this way.
 E.g. optimizataion approaches (CHOMP, TrajOpt) which require
 stronger world descriptions (SDFs, convex obstacle decompositions).
+Add cites here.
 
 The key point of this section is whether the algorithm commits to
 a discretization a priori,
