--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -248,6 +248,9 @@ To integrate: \citep{dechter1984bfsastaropt}.
 
 This stuff is more modern (1996, 2004).
 
+A review is here: \citep{eppstein1999dynamic},
+\citep{demetrescu2010dynamic}.
+
 DynamicSWSF-FP \citep{ramalingam1996}.
 
 Revisit Bellman equation.
@@ -585,3 +588,8 @@ and Figure~\ref{fig:incbi-lpastar-fig1}.
    \includegraphics{build/incbi-sq/workcellij}
    \caption{Problem: \texttt{workcellij}}
 \end{figure}
+
+\section{Implementation Details}
+
+Other implementations:
+\citep{alberts1998softwaredynamicgraph}.
